--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,16 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+minecraft_version=1.20.1
+minecraft_version_range=[1.20.1,1.21)
+forge_version=47.2.31
+forge_version_range=[47,)
+loader_version_range=[47,)
+mapping_channel=parchment
+mapping_version=2023.09.03-1.20.1
+mod_id=refraction
+mod_name=Refraction API
+mod_license=MIT
+mod_version=0.0.1
+mod_group_id=net.refractionapi.refraction
+mod_authors=Zeus, ConnorTron110
+mod_description=Refraction API
